Bug 1848916 - Ensure EntryId corresponds to path for OPFS schema 002. r=dom-storage-reviewers,janv a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D186344