dom/fs/test/common/test_syncAccessHandle.js
@@ -187,7 +187,7 @@ exported_symbols.test6 = async function () {
 
 exported_symbols.quotaTest = async function () {
   const shrinkedStorageSizeKB = 5 * 1024;
-  const defaultDatabaseSize = 458752;
+  const defaultDatabaseSize = 491520;
 
   // Shrink storage size to 5MB.
   await Utils.shrinkStorageSize(shrinkedStorageSizeKB);
